--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -5299,3 +5299,9 @@ DGM利用达尔文进化等开放式算法的原理，逐步构建起一个**不
 [强化学习之父Richard Sutton最新演讲揭示OaK架构：通向超级智能的八步愿景](https://mp.weixin.qq.com/s/PVOaXQLr2rE5icesKV1Qog)
 
 
+## 为何幻觉
+
+[OpenAI罕见发论文：我们找到了AI幻觉的罪魁祸首](https://mp.weixin.qq.com/s/f6pTUhzn9NjA_xWSvTmG4A)
+
+[Why Language Models Hallucinate](https://cdn.openai.com/pdf/d04913be-3f6f-4d2b-b283-ff432ef4aaa5/why-language-models-hallucinate.pdf)
+
