--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -5305,3 +5305,9 @@ DGM利用达尔文进化等开放式算法的原理，逐步构建起一个**不
 
 [Why Language Models Hallucinate](https://cdn.openai.com/pdf/d04913be-3f6f-4d2b-b283-ff432ef4aaa5/why-language-models-hallucinate.pdf)
 
++ 幻觉定义：模型**自信地生成不真实答案**。
++ 原因：标准的训练和评估程序**更倾向于对猜测进行奖励**，而**不是在模型勇于承认不确定时给予奖励**。如果你不知道答案，但随意猜测，你可能会很幸运地猜对。留空则必定得零分。当模型仅根据准确度（即完全答对问题的百分比）进行评分时，它们会被鼓励进行猜测，而不是承认「我不知道」。
++ 和下一个词预测的关系：与传统的机器学习问题不同，每个语句没有「真/假」标签，模型只看到流畅语言的正面示例，并且必须去近似整体分布。当没有任何被标注为无效的示例时，区分有效语句和无效语句会更加困难。但即使有标签，一些错误也是不可避免的。拼写和括号遵循一致的模式，就算有错误会随着规模的扩大而消失。但像宠物的生日这样**低频**的事实，无法仅凭模式预测，因此会导致幻觉。
++ 解决办法：对自信错误（confidential error）的惩罚力度大于对不确定性的惩罚力度，并对恰当表达不确定性的行为给予部分加分。如果主要评估指标依然继续为模型幸运的猜测给予奖励，模型就会继续学习猜测。修改评估指标可以扩大降低幻觉技术的采用范围，包括新开发的和先前研究的技术。
+
+
