--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -704,14 +704,14 @@ self._uvqk = torch.nn.Parameter(
         attention_dim * num_heads * 2)).normal_(mean=0, std=0.02),
 )
 
-##...
+"""..."""
 
 batched_mm_output = torch.mm(normed_x, self._uvqk)
 if self._linear_activation == "silu":
     batched_mm_output = F.silu(batched_mm_output)
 elif self._linear_activation == "none":
     batched_mm_output = batched_mm_output
-# 其实就是先乘一个大矩阵，再拆成4份，等价于乘4个小矩阵
+""" 其实就是先乘一个大矩阵，再拆成4份，等价于乘4个小矩阵 """
 u, v, q, k = torch.split(
     batched_mm_output,
     [self._linear_dim * self._num_heads, self._linear_dim * self._num_heads, 
@@ -1684,7 +1684,7 @@ Complete the following tasks:
 room in detail in one paragraph, including but not limited to:
 Content: including detailed visual information, such as whether
 there is text, the look and feel of the picture, the tone, etc.
-#other_tasks,
++ other_tasks,
 Finally, you need to return the result in the form of json:
 { "Event and content": {
 "Content": ...,
@@ -2634,12 +2634,12 @@ word版的笔记：[https://github.com/daiwk/collections/blob/master/assets/mult
 
 ```
 You serve as a personalized news recommendation system.
-# Input Format
-## User's History News
++ Input Format
+  + User's History News
 ${history}
-## Candidate News
+  + Candidate News
 ${candidate}
-# Output Format
++ Output Format
 Rank candidate news based on the user’s history news in
 the format: "Ranked news: <START>C#, C#,..., C#<END>".
 ```
@@ -3451,8 +3451,6 @@ from self_evaluate.utils.utils import init_model_and_transform
 
 model_name = "phi35V"
 base_model_path="DeepGlint-AI/UniME-Phi3.5-V-4.2B"
-# model_name = "llava_16"
-# base_model_path="DeepGlint-AI/UniME-LLaVA-1.6-7B"
 
 if model_name == "phi35V":
     img_prompt = '<|user|>\n<|image_1|>\nSummary above image in one word: <|end|>\n<|assistant|>\n'
