--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1096,10 +1096,9 @@ item有各种特征，如title、img、id等
 
 [OneRec-V2 Technical Report](https://arxiv.org/pdf/2508.20900)
 
-## 字节的LMN
+## 快手的OneLoc
 
-[Large Memory Network for Recommendation](https://arxiv.org/abs/2502.05558)
-
+[OneLoc: Geo-Aware Generative Recommender Systems for Local Life Service](https://arxiv.org/pdf/2508.14646)
 
 ## 字节的LONGER
 
@@ -1579,6 +1578,12 @@ user/item都是正常的推荐模型，有id特征、序列特征等，tag塔就
 
 利用大型预训练多模态模型（如LLaMA、ViT、CLIP）生成语义表示，并与用户行为空间对齐，提升冷启动和长尾物品推荐性能。
 
+## 快手的LSVCR
+
+[Enhancing Sequential Recommender with Large Language Models for Joint Video and Comment Recommendation](https://arxiv.org/pdf/2403.13574) Recsys25
+
+用于联合视频和评论推荐，仅在训练中使用LLM增强语义。
+
 ## 快手的LEARN
 
 [快手广告领域的大模型技术探索与实践](https://mp.weixin.qq.com/s/9VmOb3q4enWhqqJ_f7jnFA)
@@ -1742,33 +1747,6 @@ WWW Companion 25，[Comment Staytime Prediction with LLM-enhanced Comment Unders
 + 基于用户反馈的强化学习训练+更新策略：区别于静态的规则或内容判别API，基于判例的劣质内容建模使得KuaiMod可以通过迭代训练数据完成判别策略的更新。为了保证实时性和准确率，我们设计了基于用户反馈的强化学习范式，利用用户的线上反馈构造新的训练数据，实现线上判别服务的天级更新。
 
 
-## 快手的OneSug
-
-[OneSug: The Unified End-to-End Generative Framework for E-commerce Query Suggestion](https://arxiv.org/pdf/2506.06913v1)
-
-[https://zhuanlan.zhihu.com/p/1916467569960923848](https://zhuanlan.zhihu.com/p/1916467569960923848)
-
-prefix->query的场景
-
-![](../assets/onesug.png)
-
-
-## 快手的GREAT
-
-视频落地页里的搜索词推荐
-
-[GREAT: Guiding Query Generation with a Trie for Recommending Related Search about Video at Kuaishou](https://www.arxiv.org/pdf/2507.15267)
-
-建库：高消费价值的优质query，天级更新，构建字典树（Trie）
-
-+ 训练：增加NTTP（Next-Token in Trie Prediction）任务(其实就是同层的每个节点都算下logp)
-+ 推理：
-    + 解码时字典树实时地引导下一个token生成
-    + 还引入了一个后处理模块，过滤低质量内容
-
-![](../assets/great.png)
-
-
 ## 快手的R4ec
 
 [RecSys'25|快手R4ec：用 “反思” 让推荐更懂你](https://mp.weixin.qq.com/s/zYkZE8fqARBfywWFeJwiNQ?scene=1)
@@ -1821,11 +1799,6 @@ item侧也复用了类似的流程，把输入的(hist, item)改成(item, pos, n
 ## 快手的TrackRec
 
 [TrackRec: Iterative Alternating Feedback with Chain-of-Thought via Preference Alignment for Recommendation](https://arxiv.org/abs/2508.15388)
-
-## 快手的OneSearch
-
-[OneSearch: A Preliminary Exploration of the Unified End-to-End Generative Framework for E-commerce Search](https://arxiv.org/pdf/2509.03236)
-
 
 
 ## 字节的HLLM-Creator
@@ -2301,19 +2274,7 @@ $$
 图中的蓝色火焰部分需要在线计算，而因为$$K=4$$，所以很轻量
 
 
-## 百度的Agent4Ranking
 
-[Agent4Ranking: Semantic Robust Ranking via Personalized Query Rewriting Using Multi-agent LLM](https://arxiv.org/pdf/2312.15450)
-
-![](../assets/agent4ranking-arch.png)
-
-其中的rewrite模块如下，搞4个agent，模拟4个人群的人与LLM对话，最终得到符合人群特点的rewrite
-
-![](../assets/agent4ranking-rewrite.png)
-
-其中的rank模块如下，是一个bert，输入原始query和4个rewrites，加上target item，MMOE，算5个query间的js散度(robust loss)，以及综合输出和label的accuracy loss
-
-![](../assets/agent4ranking-rank.png)
 
 ## 丰田的SimUSER
 
@@ -2953,6 +2914,10 @@ $$
 [Realizing Scaling Laws in Recommender Systems: A Foundation–Expert Paradigm for Hyperscale Model Deployment](https://www.arxiv.org/pdf/2508.02929)
 
 
+## 腾讯的LFM4Ads
+
+[Large Foundation Model for Ads Recommendation](https://arxiv.org/abs/2508.14948)
+
 ## 蒸馏：SLMRec
 
 [ICLR2025 | SLMRec: 重新思考大语言模型在推荐系统中的价值](https://mp.weixin.qq.com/s/E6SGGKy6-D1h3zGro7KW0w)
@@ -2977,7 +2942,7 @@ $$
 
 [Decoupled Entity Representation Learning for Pinterest Ads Ranking](https://arxiv.org/pdf/2509.04337)
 
-## 生成式出价GAVE
+## 生成式出价：快手的GAVE
 
 [sigir'25「快手」生成式出价-冠军方案｜Generative Auto-Bidding with Value-Guided](https://mp.weixin.qq.com/s/fttTPY6Q30gWaSwcoIpUsA)
 
@@ -3060,6 +3025,9 @@ L_v=\frac{1}{M+1} \sum_{t-M}^t\left(\tilde{r}_{t+1}-\hat{V}_{t+1}^{\prime}\right
 $$
 
 
+## 生成式出价：美团的GRAD
+
+[Generative Large-Scale Pre-trained Models for Automated Ad Bidding Optimization](https://arxiv.org/pdf/2508.02002)
 
 # LLM+推荐小结
 
@@ -3146,7 +3114,7 @@ $$
 
 
 
-# LLM for 检索
+# LLM embedding
 
 ## Gecko
 
@@ -3370,15 +3338,6 @@ def unified_model_forward(model, model_type: str, inputs: dict, normalize_emb: b
 + 引入masked next token predtion任务：类似mlm，mask掉中间的词，拿周围的词预测
 + 对比学习simcse：前两步让模型有了bi-directional的能力，把所有词的emb通过pooling（实验表明mean pooling最有效）得到句子表示，同一句话里mask掉几个词的为正例，不同句子为负例，对比学习
 
-## GDR
-
-[小红书搜索：生成式检索的探索与实践](https://mp.weixin.qq.com/s/yApGxCGxjWnZQu8PoO9Qeg)
-
-[Generative Dense Retrieval: Memory Can Be a Burden](https://arxiv.org/abs/2401.10487)
-
-## 阿里搜索广告
-
-[阿里妈妈搜索广告2024大模型思考与实践](https://mp.weixin.qq.com/s/hgs_BzFZdjrDSbf9d74ilA)
 
 ## SyCL
 
@@ -3515,10 +3474,6 @@ def init_model_and_transform(model_name, base_model_path):
 ```
 
 
-## 百度召回
-
-[搜索广告召回的生成式革新](https://mp.weixin.qq.com/s/q4-KJvmroyIAlDtjtRMKIw)
-
 ## Qwen3-emb
 
 [Qwen3 Embedding: Advancing Text Embedding and Reranking Through Foundation Models](https://arxiv.org/pdf/2506.05176)
@@ -3604,15 +3559,77 @@ $$
 
 训练的时候用的lora，emb和rerank的hard negative设计不一样
 
-## 百度AI搜索
+# LLM+搜索
+
+## Pinterest的搜索相关性优化
+
+[Improving Pinterest Search Relevance Using Large Language Models](https://arxiv.org/pdf/2410.17152)
+
+## 百度的Agent4Ranking
+
+[Agent4Ranking: Semantic Robust Ranking via Personalized Query Rewriting Using Multi-agent LLM](https://arxiv.org/pdf/2312.15450)
+
+![](../assets/agent4ranking-arch.png)
+
+其中的rewrite模块如下，搞4个agent，模拟4个人群的人与LLM对话，最终得到符合人群特点的rewrite
+
+![](../assets/agent4ranking-rewrite.png)
+
+其中的rank模块如下，是一个bert，输入原始query和4个rewrites，加上target item，MMOE，算5个query间的js散度(robust loss)，以及综合输出和label的accuracy loss
+
+![](../assets/agent4ranking-rank.png)
+
+
+## 百度的搜索广告召回
+
+[搜索广告召回的生成式革新](https://mp.weixin.qq.com/s/q4-KJvmroyIAlDtjtRMKIw)
+
+
+## 百度的AI搜索
 
 [Towards AI Search Paradigm](https://arxiv.org/abs/2506.17188) ..63页
 
 该采用由多个LLM驱动的智能体构成的模块化体系(Master、Planner、Executor和Writer)，能够动态适应从简单事实查询到复杂多阶段推理任务的各类信息需求。这些智能体通过动态协同的工作流程，评估查询复杂性，在Master的判断和指导下对应不同任务的特性的智能体动态组合，并针对复杂任务将问题分解为可执行的任务,并协调使用各种工具进行任务执行与内容合成。
 
+
 ## 美团的IterQR
 
 [IterQR: LLM‑based Iterative Query Rewrite for E‑commerce Search](https://arxiv.org/pdf/2504.05309)
+
+## 阿里搜索广告
+
+[阿里妈妈搜索广告2024大模型思考与实践](https://mp.weixin.qq.com/s/hgs_BzFZdjrDSbf9d74ilA)
+
+## 快手的OneSearch
+
+[OneSearch: A Preliminary Exploration of the Unified End-to-End Generative Framework for E-commerce Search](https://arxiv.org/pdf/2509.03236)
+
+
+## 快手的OneSug
+
+[OneSug: The Unified End-to-End Generative Framework for E-commerce Query Suggestion](https://arxiv.org/pdf/2506.06913v1)
+
+[https://zhuanlan.zhihu.com/p/1916467569960923848](https://zhuanlan.zhihu.com/p/1916467569960923848)
+
+prefix->query的场景
+
+![](../assets/onesug.png)
+
+
+## 快手的GREAT
+
+视频落地页里的搜索词推荐
+
+[GREAT: Guiding Query Generation with a Trie for Recommending Related Search about Video at Kuaishou](https://www.arxiv.org/pdf/2507.15267)
+
+建库：高消费价值的优质query，天级更新，构建字典树（Trie）
+
++ 训练：增加NTTP（Next-Token in Trie Prediction）任务(其实就是同层的每个节点都算下logp)
++ 推理：
+    + 解码时字典树实时地引导下一个token生成
+    + 还引入了一个后处理模块，过滤低质量内容
+
+![](../assets/great.png)
 
 ## 字节的SUMMA
 
@@ -3620,23 +3637,34 @@ $$
 
 搜索广告
 
+## 小红书的GDR
+
+[小红书搜索：生成式检索的探索与实践](https://mp.weixin.qq.com/s/yApGxCGxjWnZQu8PoO9Qeg)
+
+[Generative Dense Retrieval: Memory Can Be a Burden](https://arxiv.org/abs/2401.10487)
+
+
 # 传统推荐模型
 
-## 推荐生态系统
+## Google的推荐生态系统
 
 [Modeling Recommender Ecosystems: Research Challenges at the Intersection of Mechanism Design, Reinforcement Learning and Generative Models](https://storage.googleapis.com/gweb-research2023-media/pubtools/pdf/e00cc0ce4480c15339b7798943560ad1a0d593ce.pdf)
 
-## 发现性
+## Google的发现性
 
 [Diversifying by Intent in Recommender Systems](https://arxiv.org/pdf/2405.12327)，涨了dau等指标
 
-## KuaiFormer
 
-[KuaiFormer: Transformer-Based Retrieval at Kuaishou](https://arxiv.org/pdf/2411.10057)
+## Google的item冷启
 
-## Pinnerformer
+[Item-centric Exploration for Cold Start Problem](https://arxiv.org/pdf/2507.09423)
 
-[PinnerFormer: Sequence Modeling for User Representation at Pinterest](https://arxiv.org/pdf/2205.04507)
+就是对冷启的item用beta分布(汤普森采样)去做ee。依据就是beta分布里的特点：采样出来的p，当展现很少的时候很大，即更偏向探索；展现比较多的时候，p接近于ctr，更偏向利用
+
++ alpha+点击数，beta+展现未点击数去更新
++ 采样的时候卡了一个阈值，如果$$p\left(\mathrm{~S}_{+} \mid \mathrm{u}, \mathrm{i}\right)<\mu_{\mathrm{i}}-2 \sigma_{\mathrm{i}}$$，就相当于在置信区间之外，扔掉
+
+和meta在2023年的user-centric ranking（[Breaking the Curse of Quality Saturation with User-Centric Ranking](https://arxiv.org/pdf/2305.15333)）没啥关系
 
 
 
@@ -3668,27 +3696,6 @@ content encoder的训练：对比学习
 serving：2个head分别建索引，在线同一个trigger分别从这2个索引召回，再merge
 
 
-## 阿里的ULIM
-
-[User Long-Term Multi-Interest Retrieval Model for Recommendation](https://arxiv.org/pdf/2507.10097)
-
-![](../assets/ulim.png)
-
-+ Category-Aware Hierarchical Dual-Interest Learning：
-    + 短序列pooling得到p，同时过self-attn，然后和user profile一起过nn
-    + 长序列按类别分组，分成K段得到“长类目序列”，每段（当成k/v）和p（当成query）算target-attn，然后和user profile一起过nn，得到K个向量
-    + target item和短序列的输出算内积，和长序列对应类目的emb的输出算内积
-+ Pointer-Enhanced Cascaded Category-to-Item Retrieval：
-    + PGIN（Pointer-Generator Interest Network）：
-        + pointer网络：长类目序列和短序列按时间序去重并merge得到query，然后和原始长类目序列和短序列分别算target attn，再过一个nn映射到每个类目的概率分布
-        + generator网络：长类目序列和短序列各自self attn，然后分别和user profile算taget attn，过nn后映射到每个类目的概率分布
-        + 通过一个p_poi将两个分布加权求和
-    + Category-Constrained Retrieval：取PGIN产出的top K个类目，产出K+1个向量，然后去并行地做ANN召回：
-        + 每个类目把对应的长类目序列拿出来，得到K个向量
-        + 把短序列向量取出来
-
-最终是在淘宝秒杀app上的，有一些收益
-论文中短序列最多100，不过作者没有说长序列有多长
 
 ## Meta的CABB建模
 
@@ -3705,23 +3712,6 @@ serving：2个head分别建索引，在线同一个trigger分别从这2个索引
 + 不同类目的向量算cos，但因为每个数都是正的，所以算出来的cos是0到1之间，这个就是上面用到的相似度
 
 另外看图里是这两个目标加权得到输出，去和一个ad conversion label算loss，这个label感觉应该是session内是否购买吧
-
-## Google的item冷启
-
-[Item-centric Exploration for Cold Start Problem](https://arxiv.org/pdf/2507.09423)
-
-就是对冷启的item用beta分布(汤普森采样)去做ee。依据就是beta分布里的特点：采样出来的p，当展现很少的时候很大，即更偏向探索；展现比较多的时候，p接近于ctr，更偏向利用
-
-+ alpha+点击数，beta+展现未点击数去更新
-+ 采样的时候卡了一个阈值，如果$$p\left(\mathrm{~S}_{+} \mid \mathrm{u}, \mathrm{i}\right)<\mu_{\mathrm{i}}-2 \sigma_{\mathrm{i}}$$，就相当于在置信区间之外，扔掉
-
-和meta在2023年的user-centric ranking（[Breaking the Curse of Quality Saturation with User-Centric Ranking](https://arxiv.org/pdf/2305.15333)）没啥关系
-
-## 快手的CAVE
-
-[From Generation to Consumption: Personalized List Value Estimation for Re-ranking](https://arxiv.org/pdf/2508.02242)
-
-重排里的list-wise evaluator，以前是对整个list给出价值预估，现在预估了一个用户退出的概率，只对退出之前的那些item的sub list预估价值
 
 ## 美团的NGA
 
@@ -3765,6 +3755,30 @@ R=\sum_{i=1}^k\left(\Theta_i \times \operatorname{bid}_i \times p_i+\alpha \time
 $$
 
 
+
+## 阿里的ULIM
+
+[User Long-Term Multi-Interest Retrieval Model for Recommendation](https://arxiv.org/pdf/2507.10097)
+
+![](../assets/ulim.png)
+
++ Category-Aware Hierarchical Dual-Interest Learning：
+    + 短序列pooling得到p，同时过self-attn，然后和user profile一起过nn
+    + 长序列按类别分组，分成K段得到“长类目序列”，每段（当成k/v）和p（当成query）算target-attn，然后和user profile一起过nn，得到K个向量
+    + target item和短序列的输出算内积，和长序列对应类目的emb的输出算内积
++ Pointer-Enhanced Cascaded Category-to-Item Retrieval：
+    + PGIN（Pointer-Generator Interest Network）：
+        + pointer网络：长类目序列和短序列按时间序去重并merge得到query，然后和原始长类目序列和短序列分别算target attn，再过一个nn映射到每个类目的概率分布
+        + generator网络：长类目序列和短序列各自self attn，然后分别和user profile算taget attn，过nn后映射到每个类目的概率分布
+        + 通过一个p_poi将两个分布加权求和
+    + Category-Constrained Retrieval：取PGIN产出的top K个类目，产出K+1个向量，然后去并行地做ANN召回：
+        + 每个类目把对应的长类目序列拿出来，得到K个向量
+        + 把短序列向量取出来
+
+最终是在淘宝秒杀app上的，有一些收益
+论文中短序列最多100，不过作者没有说长序列有多长
+
+
 ## 阿里的DGenCTR
 
 [基于离散扩散模型的生成式CTR预估](https://mp.weixin.qq.com/s/JKuVTu3UxYWa5rkK5v_3Ag)
@@ -3775,11 +3789,38 @@ $$
 
 ![](../assets/dgenctr-model.png)
 
+
+## 快手的KuaiFormer
+
+[KuaiFormer: Transformer-Based Retrieval at Kuaishou](https://arxiv.org/pdf/2411.10057)
+
+## 快手的CAVE
+
+[From Generation to Consumption: Personalized List Value Estimation for Re-ranking](https://arxiv.org/pdf/2508.02242)
+
+重排里的list-wise evaluator，以前是对整个list给出价值预估，现在预估了一个用户退出的概率，只对退出之前的那些item的sub list预估价值
+
 ## 快手的DimeRec
 
 [快手 | DimeRec: 扩散模型在序列推荐的应用](https://mp.weixin.qq.com/s/s21SJYsq8mRLt4zaQrAx5g)
 
 [DimeRec: A Unified Framework for Enhanced Sequential Recommendation via Generative Diffusion Models](https://arxiv.org/pdf/2408.12153)
+
+
+
+## 字节的LMN
+
+[Large Memory Network for Recommendation](https://arxiv.org/abs/2502.05558)
+
+
+## 字节的AsymDiffRec
+
+[Asymmetric Diffusion Recommendation Model](https://arxiv.org/pdf/2508.12706)
+
+## Pinterest的Pinnerformer
+
+[PinnerFormer: Sequence Modeling for User Representation at Pinterest](https://arxiv.org/pdf/2205.04507)
+
 
 ## Pinterest的TransAct V2
 
