--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -314,6 +314,7 @@ PLM（pretrained language models），即bert等
 + [Jeff Dean演讲回顾LLM发展史，Transformer、蒸馏、MoE、思维链等技术都来自谷歌](https://mp.weixin.qq.com/s/5EUQlD5isnEEzXBw1AJEig)
 + [盘一盘，2017年Transformer之后，LLM领域的重要论文](https://mp.weixin.qq.com/s/1lUSlc0tvEWLuOFOP0WkUA)
 + [2023-2025大模型领域2年发展综述](https://mp.weixin.qq.com/s/ZJIYSjYVQZrKImc1hWKftQ)
++ 一个google大佬的笔记：[google doc](https://docs.google.com/document/d/1WUk_A3LDvRJ8ZNvRG--vhI287nDMR-VNM4YOV8mctbI/edit?tab=t.u5rxkidg8s5c)，我copy了一份：[google doc](https://docs.google.com/document/d/1EG-iWPa6G21id2l15biw5QShKokz-prgBupvs45UQf0/edit?usp=sharing)，同时导出了一个[pdf](https://github.com/daiwk/collections/blob/master/assets/BAK-Reasoning-Engines-gulli.pdf)
 
 ## 课程
 
