--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1494,6 +1494,12 @@ $$
 
 在线infer的加速，u的历史是可以共享的，所以同时把多个c输入进来，然后通过mask（感觉可以参考mtgr的mtp）就可以实现u侧历史只算一次
 
+## 阿里的SERAL
+
+[Bursting Filter Bubble: Enhancing Serendipity Recommendations with Aligned Large Language Models](https://arxiv.org/pdf/2502.13539)
+
+![](../assets/SERAL.png)
+
 ## 阿里的URM
 
 [当购物用上大模型！阿里妈妈首发世界知识大模型，破解两大推荐难题](https://mp.weixin.qq.com/s/eJewql0mZk199HyzkjkiuA)
@@ -1914,6 +1920,10 @@ def get_paragraph_representation(outputs, mask, pooler='cls', dim=1):
     else:
         raise NotImplementedError
 ```
+
+## 华为的LLMTreeRec
+
+[LLMTreeRec: Unleashing the Power of Large Language Models for Cold-Start Recommendations](https://arxiv.org/pdf/2404.00702)
 
 ## 华为的LASER
 
