--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -315,7 +315,7 @@ PLM（pretrained language models），即bert等
 + [盘一盘，2017年Transformer之后，LLM领域的重要论文](https://mp.weixin.qq.com/s/1lUSlc0tvEWLuOFOP0WkUA)
 + [2023-2025大模型领域2年发展综述](https://mp.weixin.qq.com/s/ZJIYSjYVQZrKImc1hWKftQ)
 + 一个google大佬的笔记：[google doc](https://docs.google.com/document/d/1WUk_A3LDvRJ8ZNvRG--vhI287nDMR-VNM4YOV8mctbI/edit?tab=t.u5rxkidg8s5c)，我copy了一份：[google doc](https://docs.google.com/document/d/1EG-iWPa6G21id2l15biw5QShKokz-prgBupvs45UQf0/edit?usp=sharing)，同时导出了一个[pdf](https://github.com/daiwk/collections/blob/master/assets/BAK-Reasoning-Engines-gulli.pdf)
-+ [https://github.com/changyeyu/LLM-RL-Visualized](https://github.com/changyeyu/LLM-RL-Visualized)，自己fork了一份：[https://github.com/daiwk/LLM-RL-Visualized](https://github.com/daiwk/LLM-RL-Visualized)
++ **这个真的不错**：[https://github.com/changyeyu/LLM-RL-Visualized](https://github.com/changyeyu/LLM-RL-Visualized)，自己fork了一份：[https://github.com/daiwk/LLM-RL-Visualized](https://github.com/daiwk/LLM-RL-Visualized)
 
 
 ## 课程
