--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1099,7 +1099,25 @@ item有各种特征，如title、img、id等
 
 ![](../assets/reg4rec.png)
 
+## 阿里的MMQ
 
+[MMQ: Multimodal Mixture-of-Quantization Tokenization for Semantic ID Generation and User Behavioral Adaptation](https://arxiv.org/pdf/2508.15281)
+
+![](../assets/mmq.png)
+
+tokenizer训练阶段：
++ MoE：有共享expert、图片自己的expert、文本自己的expert，三者融合后再过decoder
++ loss=重构loss（整个item的）+辅助loss（图片和文本各自的）+正交正则loss（专家多样性、避免坍缩），
+
+其中，重构loss如下，$$e$$是encoder的输入，$$z$$是decoder的输入，$$z_q$$是和$$z$$的cos最大的code（即下面的hard_ind）对应的向量(即下面的soft_ind)
+
+$$
+\mathcal{L}_{\text {recon }}=\left\|\mathbf{e}-\operatorname{decoder}\left(\mathbf{z}+\operatorname{sg}\left(\mathbf{z}_q-\mathbf{z}\right)\right)\right\|^2
+$$
+
+用户行为finetune阶段：
++ 通过tokenizer得到对应的code，把code接到推荐模型里，可以适配判别式任务/生成式任务
++ loss=task loss+重构loss+正交正则loss
 
 ## 快手的RecGPT
 
