--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -2088,6 +2088,9 @@ KDD25，[Enhanced Emotion-aware Music Recommendation via Large Language Models](
 
 [STAR: A Simple Training-free Approach for Recommendations using Large Language Models](https://arxiv.org/pdf/2410.16458)
 
+## Google的高效item id生成
+
+[Efficient Item ID Generation for Large-Scale LLM-based Recommendation](https://arxiv.org/pdf/2509.03746)
 
 ## Meta的EmbSum
 
