--- a/posts/1.8.llm_o1.md
+++ b/posts/1.8.llm_o1.md
@@ -1488,6 +1488,38 @@ Kimi–Researcher是一个自主的智能体与思维模型，旨在通过多步
 + 面对多来源信息冲突时，能通过迭代假设修正与自我纠错机制(hypothesis refinement and self-correction)来消除矛盾，逐步推导出一致且合理的结论。
 + 展现出谨慎与严谨的行为模式：即便面对看似简单的问题，也会主动进行额外搜索，并交叉验证信息后再作答。
 
+## Tongyi-DeepResearch
+
+[通义DeepResearch震撼发布！性能比肩OpenAI，模型、框架、方案完全开源](https://mp.weixin.qq.com/s/XLpRvvpG7XPX1GmpwG3BMQ)
+
+[https://github.com/Alibaba-NLP/DeepResearch](https://github.com/Alibaba-NLP/DeepResearch)
+
+[https://huggingface.co/Alibaba-NLP/Tongyi-DeepResearch-30B-A3B](https://huggingface.co/Alibaba-NLP/Tongyi-DeepResearch-30B-A3B)
+
+### 数据策略
+
++ 增量预训练(CPT, continual pre-training)数据：
+  + 数据重组和问题构建：基于广泛收集和增量更新的文档、公开的爬虫数据、知识图谱、后训练产生的轨迹数据和工具调用返回结果（如搜索结果和网页访问记录）等，构建了一个**以实体为锚定的开放世界知识记忆**。然后，基于采样的实体和相关知识构造多风格的（问题，答案）对，以尽可能涵盖智能体所面临的真实场景。
+  + 动作合成：基于多风格问题和历史轨迹数据，构建了三种类型的动作数据：**规划**、**推理**和**决策**。能够在离线环境下大规模、全面地探索潜在的reasoning-action空间，从而消除了对额外商业工具API调用的需求。特别地，对于决策动作合成，该研究将轨迹重构为多步骤决策过程，以增强模型的决策能力。
+
+![](../assets/tongyi-deepresearch-action-synthesis.png)
+
++ 后训练数据：
+  + 全自动的合成数据生成方案：从早期从点击流进行逆向工程的QA pair对的WebWalker([WebWalker: Benchmarking LLMs in Web Traversal](https://arxiv.org/abs/2501.07572))，到更系统的基于图的合成的WebSailor([WebSailor: Navigating Super-human Reasoning for Web Agent](https://arxiv.org/abs/2507.02592)和[WebSailor-V2: Bridging the Chasm to Proprietary Agents via Synthetic Data and Scalable Reinforcement Learning](https://arxiv.org/abs/2509.13305))，再到形式化的任务建模的WebShaper([WebShaper: Agentically Data Synthesizing via Information-Seeking Formalization](https://arxiv.org/abs/2507.15061))，旨在全自动化生成超越人工标注质量的数据集，以挑战模型的能力极限。
+  + 生成能应对复杂问题的问答数据：
+    + 通过知识图谱随机游走和表格数据融合等方式，从真实网站数据中提取信息，保证数据结构的真实性。
+    + 再通过策略性地模糊或隐藏问题中的信息来增加难度。将问答难度建模为一系列可控的 “原子操作”，这样就可以系统性地提升问题的复杂度。
+  + 减少推理捷径：基于集合论对信息搜索问题进行了形式化建模，开发了能够以可控方式扩展问题的智能体，并最大限度地减少了推理捷径和结构冗余，进一步提升了问答系统的质量。
+  + 自动化数据引擎：
+
+
+### 推理模式
+
+
+### 训练
+
+
+
 # 高效reasoning
 
 ## reasoning economy
