--- a/posts/1.4.llm_sft_and_usages.md
+++ b/posts/1.4.llm_sft_and_usages.md
@@ -208,6 +208,10 @@ LoRA的优点：
 + 基于**重要性分数**的分配：[Adaptive budget allocation for parameter-efficient fine-tuning](https://arxiv.org/pdf/2303.10512.pdf)提出的AdaLoRA
 + **无需搜索**的**最优秩选择**：[Dylora: Parameter efficient tuning of pre-trained models using dynamic search-free low- rank adaptation](https://arxiv.org/pdf/2210.07558.pdf)
 
+[Thinking Machines又发高质量博客：力推LoRA，不输全量微调](https://mp.weixin.qq.com/s/Q6fmffP5uxCIRZotDMnI3g)
+
+[https://thinkingmachines.ai/blog/lora/](https://thinkingmachines.ai/blog/lora/)
+
 ### 小结
 
 LoRA已经有广泛的应用，如LLaMA和BLOOM，
