--- a/posts/1.4.llm_sft_and_usages.md
+++ b/posts/1.4.llm_sft_and_usages.md
@@ -212,6 +212,17 @@ LoRA的优点：
 
 [https://thinkingmachines.ai/blog/lora/](https://thinkingmachines.ai/blog/lora/)
 
++ 在小数据量任务上，LoRA与FullFT几乎没有差距，完全可以对齐；
++ 在大数据量任务上，LoRA的容量不足，承载不了过多新知识，表现略显吃力；
++ 在强化学习任务里，哪怕LoRA rank=1这么小的设定，也能跑出与全量微调接近的效果。
+
+一些技巧：
+
++ 只加在注意力层并不理想，覆盖所有层（尤其MLP/MoE）效果更佳。
++ LoRA在大batch size下，比FullFT更容易掉性能
++ LoRA的学习率和超参数规律与FullFT不同，需要单独调优。最优学习率通常是FullFT的约10倍。初期训练时，LoRA需要更高的学习率（约15倍FullFT），长期训练则趋近于10倍。
+
+
 ### 小结
 
 LoRA已经有广泛的应用，如LLaMA和BLOOM，
