--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1282,9 +1282,11 @@ decode出来有两个东西，rq的code和dense
 + 然后每一个code和原来的seq一起输入decoder，得到的pred就是dense，再拿这个dense去ann找n个item
 + 最后对这m*n个item拿两个相似度融合出一个得分，取topk出来
 
-## 百度的UNIQUE
+## 百度的“心流”
 
 [百万美金背后的推荐技术突破，内部揭秘2025年百度最高奖获奖“心流”团队的背后故事](https://mp.weixin.qq.com/s/O4iqt1ADCWwKNEq0hCyMrg)
+
+[让推荐更懂你：百度2025最高奖‘心流’团队的标题改写实战](https://mp.weixin.qq.com/s/IDzjnXMw9NXHZXZue7RQKQ)
 
 ## 网易云音乐的Climber
 
