--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -5365,6 +5365,13 @@ DGM利用达尔文进化等开放式算法的原理，逐步构建起一个**不
 
 ![](../assets/efficient-attn.png)
 
+# 各种结构对比
+
+[https://magazine.sebastianraschka.com/p/the-big-llm-architecture-comparison](https://magazine.sebastianraschka.com/p/the-big-llm-architecture-comparison)
+
+
+
+
 
 # 一些前沿
 
