--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -5370,8 +5370,111 @@ DGM利用达尔文进化等开放式算法的原理，逐步构建起一个**不
 [https://magazine.sebastianraschka.com/p/the-big-llm-architecture-comparison](https://magazine.sebastianraschka.com/p/the-big-llm-architecture-comparison)
 
 
+# 世界模型
+
+[怒斥Sora之后，LeCun放出「视觉世界模型」论文，揭示AI学习物理世界的关键​](https://mp.weixin.qq.com/s/KY-bTD-bxdB3Q-q97Gv7fg)
+
+[100万token，一次能分析1小时YouTube视频，「大世界模型」火了](https://mp.weixin.qq.com/s/8ONe7_ejQQIT1UwqDGK-vg)
+
+[WORLD MODEL ON MILLION-LENGTH VIDEO AND LANGUAGE WITH RINGATTENTION](https://arxiv.org/pdf/2402.08268.pdf)
+
+[https://github.com/LargeWorldModel/LWM](https://github.com/LargeWorldModel/LWM)
+
+[Sora是世界模拟器吗？全球首篇综述全面解析通用世界模型](https://mp.weixin.qq.com/s/rkq7NXGvB0O1Kstd_mTNJQ)
+
+[Is Sora a World Simulator? A Comprehensive Survey on General World Models and Beyond](https://arxiv.org/pdf/2405.03520)
+
+[世界模型也扩散！训练出的智能体竟然不错](https://mp.weixin.qq.com/s/AWt1Jgvr2aj6sjkGRV9-hg)
+
+[Diffusion for World Modeling: Visual Details Matter in Atari](https://arxiv.org/pdf/2405.12399)
+
+[https://github.com/eloialonso/diamond](https://github.com/eloialonso/diamond)
 
 
+
+## pandora
+
+[通用世界模型问世：不学习就能生成新领域视频，可实时控制](https://mp.weixin.qq.com/s/Vj2W3BtKITV4mxwVhDJHzg)
+
+[Pandora : Towards General World Model with Natural Language Actions and Video States](https://world-model.maitrix.org/assets/pandora.pdf)
+
+[https://github.com/maitrix-org/Pandora](https://github.com/maitrix-org/Pandora)
+
+
+[ACL 2024论文盖棺定论：大语言模型≠世界模拟器，Yann LeCun：太对了](https://mp.weixin.qq.com/s/FBqYb_gcBr5D204mDtmCOA)
+
+[Can Language Models Serve as Text-Based World Simulators?](https://arxiv.org/pdf/2406.06485)
+
+## WHALE
+
+[WHALE来了，南大周志华团队做出更强泛化的世界模型](https://mp.weixin.qq.com/s/9vk__IpfMdYj57VjtV1HvQ)
+
+[WHALE: TOWARDS GENERALIZABLE AND SCALABLE WORLD MODELS FOR EMBODIED DECISION-MAKING](https://arxiv.org/pdf/2411.05619)
+
+## genie 2
+
+[谷歌世界模型爆发：单张图生成可玩3D世界，还要和马斯克一起做AI游戏](https://mp.weixin.qq.com/s/PaUScHrclUwYABwT8LL5zg)
+
+[https://deepmind.google/discover/blog/genie-2-a-large-scale-foundation-world-model/](https://deepmind.google/discover/blog/genie-2-a-large-scale-foundation-world-model/)
+
+## NWM
+
+[LeCun团队新作：在世界模型中导航](https://mp.weixin.qq.com/s/V5rXxbLYmR8UuiVq-gsi9A)
+
+[Navigation World Models](https://arxiv.org/pdf/2412.03572v1)
+
+[https://www.amirbar.net/nwm/](https://www.amirbar.net/nwm/)
+
+## V-JEPA 2
+
+[刚刚，LeCun亲自出镜，Meta推出新世界模型！](https://mp.weixin.qq.com/s/i2lMeFX6VWWxqL_ZKmznfw)
+
+[V-JEPA 2: Self-Supervised Video Models Enable Understanding, Prediction and Planning](https://ai.meta.com/research/publications/v-jepa-2-self-supervised-video-models-enable-understanding-prediction-and-planning/)
+
+[https://github.com/facebookresearch/vjepa2](https://github.com/facebookresearch/vjepa2)
+
+[https://huggingface.co/collections/facebook/v-jepa-2-6841bad8413014e185b497a6](https://huggingface.co/collections/facebook/v-jepa-2-6841bad8413014e185b497a6)
+
+## Agents-world-model
+
+[AGI真方向？谷歌证明：智能体在自研世界模型，世界模型is all You Need](https://mp.weixin.qq.com/s/k-hd-M1XK7fsH2LI80r5AA)
+
+[General agents contain world models](https://arxiv.org/pdf/2506.01622v4)
+
+
+## Context as Memory
+
+[上下文记忆力媲美Genie3，且问世更早：港大和可灵提出场景一致的交互式视频世界模型！](https://mp.weixin.qq.com/s/lsLYxySrtNN7QY3g7dVoZA)
+
+[Context as Memory: Scene-Consistent Interactive Long Video Generation with Memory Retrieval](https://arxiv.org/pdf/2506.03141)
+
+
+## Dreamer4
+
+[梦里啥都有？谷歌新世界模型纯靠「想象」训练，学会了在《我的世界》里挖钻石](https://mp.weixin.qq.com/s/gAepE8xmRwyARVTY1JijSg)
+
+[Training Agents Inside of Scalable World Models](https://www.arxiv.org/pdf/2509.24527v1)
+
+[https://danijar.com/project/dreamer4/](https://danijar.com/project/dreamer4/)
+
+现有模型的问题：
+
++ 世界模型智能体（如 Dreamer 3）是迄今为止在游戏和机器人领域表现最佳且最为稳健的强化学习算法之一。虽然这些模型在其特定的狭窄环境中速度快且准确，但其架构缺乏拟合复杂现实世界分布的能力。
++ 可控视频模型（如Genie 3）已在多样的真实视频和游戏上进行训练，并实现了多样的场景生成和简单交互。这些模型基于可扩展架构，如diffusion transformer。然而，它们在学习物体交互和游戏机制的精确物理规律方面仍存在困难，这限制了它们在训练成功智能体方面的实用性。此外，它们通常需要多个GPU才能实时模拟单个场景，这进一步降低了它们在想象训练方面的实用性。 
+
+Dreamer 4是一种可扩展的智能体，它通过在快速且准确的世界模型中进行想象训练(Imagination Training)来解决控制任务。
+
++ 利用一种新颖的shortcut forcing目标和高效的Transformer架构，准确学习复杂的物体交互，同时实现实时人机交互（在单个GPU上）和高效的想象训练。
++ 可以在大量无标签视频上进行训练，并且只需要少量与动作配对的视频。这为未来从多样的网络视频中学习通用世界知识开辟了可能性，因为这些网络视频没有动作标签。 
+
+![](../assets/dreamer4.png)
+
+模型：
+
++ Tokenizer：对部分被掩码的图像块和latent token进行编码，通过带有tanh激活的低维投影压缩潜变量，并对图像块进行解码。它使用因果注意力实现时间压缩，同时允许逐帧解码。
++ 动力学模型：在由动作、shortcut 噪声水平、步长和tokenizer表示交错组成的序列上运行。通过shortcut forcing目标对表示进行去噪，以实现少量前向传递的交互式生成，并防止随时间累积误差。
+
+首先在视频和动作上预训练tokenizer和世界模型，然后通过交错任务嵌入将策略和奖励模型微调至世界模型中，最后通过想象训练对策略进行后训练。
 
 # 一些前沿
 
