--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -3457,9 +3457,6 @@ def unified_model_forward(model, model_type: str, inputs: dict, normalize_emb: b
 
 [Real-time Ad retrieval via LLM-generative Commercial Intention for Sponsored Search Advertising](https://arxiv.org/pdf/2504.01304)
 
-## gemini embedding
-
-[Gemini Embedding: Generalizable Embeddings from Gemini](https://arxiv.org/pdf/2503.07891)
 
 ## BGE-code/VL
 
@@ -3655,6 +3652,11 @@ $$
 
 训练的时候用的lora，emb和rerank的hard negative设计不一样
 
+
+## gemini embedding
+
+[Gemini Embedding: Generalizable Embeddings from Gemini](https://arxiv.org/pdf/2503.07891)
+
 ## EmbeddingGemma
 
 [EmbeddingGemma: Powerful and Lightweight Text Representations](https://arxiv.org/abs/2509.20354)
@@ -3673,6 +3675,22 @@ $$
 + 其实encoder部分和原模型是一样的，只是把mask改成双向的。在得到T个token的输出后，mean pooling（这里对比过更复杂的pooling方式，发现mean的效果最好）成一个768的emb。再过2层nn，最终映射到768。
 
 训练：
+
+模型输入是task描述+原文本，例如检索任务里，query侧是"task: search result | query: {content}"，doc侧是"title: {title | 'none'} | text: {content}"
+
+有3个loss：
+
++ 基于inbatch负例的NCE：
+
+$$
+\mathcal{L}_C=\frac{1}{B} \sum_{i=1}^B\left[-\log \frac{e^{\operatorname{sim}\left(\mathbf{q}_i, \mathbf{p}_i^{+}\right) / \tau}}{w_i e^{\operatorname{sim}\left(\mathbf{q}_i, \mathbf{p}_i^{-}\right) / \tau}+\sum_{j=1}^B \mathbb{1}_{\mathrm{TN}}(i, j) e^{\operatorname{sim}\left(\mathbf{q}_i, \mathbf{p}_j^{+}\right) / \tau}}\right]
+$$
+
+其中的sim是cosine相似度，而$$\mathbb{1}_{\mathrm{TN}}$$把重复样本里的false negatives mask掉。另外，$$w_i=\exp \left(\alpha \operatorname{sg}\left(\operatorname{sim}\left(\mathbf{q}_i, \mathbf{p}_i^{-}\right)\right)\right)$$表示一个hard negative的难度，$$\alpha$$是个超参，设成5
+
+$$
+\mathbb{1}_{\mathrm{TN}}(i, j)= \begin{cases}0 & \text { if } q_i=q_j \text { or } p_i^{+}=p_j^{+} \\ 1 & \text { otherwise } .\end{cases}
+$$
 
 + 蒸馏：用更大更强的Gemini Embedding模型当老师，通过embedding matching的几何蒸馏方法，直接对齐两个模型的嵌入空间。
 + 用了spread-out的正则化损失函数，目的是让生成的向量在嵌入空间里散得更开，充分利用整个空间的表达能力。这样做的好处是模型对量化更robust，而且用最近邻检索时效率也更高。
