--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -3673,12 +3673,9 @@ $$
 
 + 把gemma这种decoder only的模型改成一个encoder-decoder架构(用如上图的T5-gemma的方法，[Encoder-decoder gemma: Improving the quality-efficiency trade-off via adaptation](https://arxiv.org/abs/2504.06225))。
 + 其实encoder部分和原模型是一样的，只是把mask改成双向的。在得到T个token的输出后，mean pooling（这里对比过更复杂的pooling方式，发现mean的效果最好）成一个768的emb。再过2层nn，最终映射到768。
++ 模型输入是task描述+原文本，例如检索任务里，query侧是"task: search result | query: {content}"，doc侧是"title: {title | 'none'} | text: {content}"
 
-训练：
-
-模型输入是task描述+原文本，例如检索任务里，query侧是"task: search result | query: {content}"，doc侧是"title: {title | 'none'} | text: {content}"
-
-有3个loss：
+3个loss：
 
 + 基于inbatch负例的NCE：
 
@@ -3686,14 +3683,32 @@ $$
 \mathcal{L}_C=\frac{1}{B} \sum_{i=1}^B\left[-\log \frac{e^{\operatorname{sim}\left(\mathbf{q}_i, \mathbf{p}_i^{+}\right) / \tau}}{w_i e^{\operatorname{sim}\left(\mathbf{q}_i, \mathbf{p}_i^{-}\right) / \tau}+\sum_{j=1}^B \mathbb{1}_{\mathrm{TN}}(i, j) e^{\operatorname{sim}\left(\mathbf{q}_i, \mathbf{p}_j^{+}\right) / \tau}}\right]
 $$
 
-其中的sim是cosine相似度，而$$\mathbb{1}_{\mathrm{TN}}$$把重复样本里的false negatives mask掉。另外，$$w_i=\exp \left(\alpha \operatorname{sg}\left(\operatorname{sim}\left(\mathbf{q}_i, \mathbf{p}_i^{-}\right)\right)\right)$$表示一个hard negative的难度，$$\alpha$$是个超参，设成5
+其中的sim是cosine相似度，而$$\mathbb{1}_{\mathrm{TN}}$$把重复样本里的false negatives mask掉(其实就是保留batch内其他query的正的doc，还有当前query的其他正的doc)。另外，$$w_i=\exp \left(\alpha \operatorname{sg}\left(\operatorname{sim}\left(\mathbf{q}_i, \mathbf{p}_i^{-}\right)\right)\right)$$表示一个hard negative的难度，$$\alpha$$是个超参，设成5
 
 $$
 \mathbb{1}_{\mathrm{TN}}(i, j)= \begin{cases}0 & \text { if } q_i=q_j \text { or } p_i^{+}=p_j^{+} \\ 1 & \text { otherwise } .\end{cases}
 $$
 
-+ 蒸馏：用更大更强的Gemini Embedding模型当老师，通过embedding matching的几何蒸馏方法，直接对齐两个模型的嵌入空间。
-+ 用了spread-out的正则化损失函数，目的是让生成的向量在嵌入空间里散得更开，充分利用整个空间的表达能力。这样做的好处是模型对量化更robust，而且用最近邻检索时效率也更高。
++ global orthogonal regularizer(GOR)的loss：
+
+来自[Learning spread-out local feature descriptors](https://arxiv.org/abs/1708.06320)，可以让emb在emb空间内尽量展开，一方面对量化更鲁棒，另一方面也更方便ann检索。其实就是让随机挑选的一个pair对在统计意义上接近于从单位球面上的均匀采样，论文中衡量的是mean和二阶矩(second moment)，这里只用了二阶矩，因为发现二阶矩接近的时候，mean自然也会更接近。如下，对query间和正样本间均做了二阶矩的约束。
+
+$$
+\mathcal{L}_{\mathcal{S}}=\frac{1}{B(B-1)} \sum_{i, j \in \mathcal{B}: i \neq j}\left(\mathbf{q}_i^{\top} \mathbf{q}_j\right)^2+\frac{1}{B(B-1)} \sum_{i, j \in \mathcal{B}: i \neq j}\left(\mathbf{p}_i^{+\top} \mathbf{p}_j^{+}\right)^2
+$$
+
++ embed distill loss
+
+来自[EmbedDistill: A Geometric Knowledge Distillation for Information Retrieval](https://arxiv.org/abs/2301.12005)，看着好像就是teacher和student的emb算一下L2距离，对query间、正样本间、hard负样本间均算这个loss：$$\mathcal{L}_{\mathcal{D}}=\mathcal{L}_{\mathcal{D}}^{\mathrm{Q}}+\mathcal{L}_{\mathcal{D}}^{\mathrm{P}^{+}}+\mathcal{L}_{\mathcal{D}}^{\mathrm{P}^{-}}$$
+
+此外，NCE和GOR的loss也通过MRL作用到了各个子emb上
+
+训练的trick：
+
++ Encoder-Decoder Training：用如上的T5Gemma方式改成enc-dec结构，然后在gemma3的预训练数据上通过UL2（[Ul2: Unifying language learning paradigms](https://arxiv.org/abs/2205.05131)）进行预训练，然后拿这个encoder来用
++ Pre-finetuning：用大量的无监督语料训练，加大batch size以充足的emb负例，并让梯度更稳定。任务覆盖了问答、句子相似度、代码检索、网络搜索等。
++ Finetuning：高质量的数据，小的batchsize，加了hard negative，让batch内的样本更难
+
 + Model Souping：不是简单地把不同超参数训练出来的模型权重做平均，也不是随机把数据集分成几块训练多个模型做平均，而是先用贝叶斯优化搞出好几个专长于不同领域的“专家”数据集，然后用这些数据集分别训练模型，最后再把这些模型的权重平均起来。结果就是最终的模型泛化能力更强，在各个任务上都比单个模型表现更好。
 	
 效果：
