--- a/posts/4.llm_note.md
+++ b/posts/4.llm_note.md
@@ -1,3 +1,5 @@
+参考[https://github.com/changyeyu/LLM-RL-Visualized](https://github.com/changyeyu/LLM-RL-Visualized)，对应的书《大模型算法：强化学习、微调与对齐》）
+
 # 概述
 
 llm训练时的teacher forcing机制：生成第i个token的输入：
@@ -15,3 +17,10 @@ llm训练时的teacher forcing机制：生成第i个token的输入：
 + 参数$$lora_{alpha}$$用于缩放Lora输出，即$$W_{merge}=W+A*B*lora_{alpha}/lora_{rank}$$
 + 学习率一般开始的时候比较小，后面可以再调整，不过如果lora_alpha较大，可以适当减小学习率
 + 在推理的时候，可以先进行融合，其实就是算好$$W_{merge}$$，推理的时候直接用
+
+## prefix-tuning
+
+大概是在prompt的最前面加若干个虚拟token，然后这部分有自己的参数（最开始的emb，还有后面的k和v，这里的k和v都是2个mlp，先映射到小一点的d'，再映射到d），总的可训练参数量参考：
+
+![](../assets/prefix-tuning-params.png)
+
