--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -2367,7 +2367,11 @@ $$
 
 图中的蓝色火焰部分需要在线计算，而因为$$K=4$$，所以很轻量
 
+## Snap对sid和文本的对比
 
+[推荐算法(2025.10.9)：Snap说：做GR推荐的同行们，你们走错方向了](https://mp.weixin.qq.com/s/2G3-Moegkx5x8f0Yt0gCVw)
+
+[UNDERSTANDING GENERATIVE RECOMMENDATION WITH SEMANTIC IDS FROM A MODEL-SCALING VIEW](https://arxiv.org/pdf/2509.25522)
 
 
 ## 丰田的SimUSER
